--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=Spring-E-Commerce-Demo
 
 # Database Connection
 
-spring.datasource.url =jdbc:postgresql://localhost:5432/SpringDB001
+spring.datasource.url =jdbc:postgresql://localhost:5432/DemoECommerce
 spring.datasource.username=postgres
 spring.datasource.password=3836
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
